# open-claude-code

./: .env.example  .gitignore  AGENTS.md  MCP.md  README.md  README_improved.md  ROADMAP.md  SESSION_TEST_TASKS.md  SKILLS.md  next_phase_context.json  openagent.mcp.json  openagent.mcp.remote.json  openagent.sh  opencode仓库分析报告.md  pyproject.toml  skills-lock.json  stage1_log.jsonl  work_log.jsonl  仓库分类方案.md  长江主线池州安庆九江旅游攻略.py
.claude/agents/: code-improver.md
examples/: minimal_demo.py
output/doc/: 长江主线池州-安庆-九江旅游攻略.docx
src/openagent/: __init__.py
tests/: test_agent_loop.py  test_agent_routing.py  test_agent_store.py  test_agent_system.py  test_background_tasks.py  test_builtin_tools.py  test_cli.py  test_env_loader.py  test_events.py  test_extensions.py  test_loop_resilience.py  test_mcp_system.py  test_permission_system.py  test_registry.py  test_runtime_tasks.py  test_session_core.py  test_session_store.py  test_settings.py  test_skill_system.py  test_snapshot_system.py  test_subagent.py  test_task_validation.py  test_termination.py  test_tool_runtime_extensions.py  test_volcengine_provider.py
work/: 5.txt  agent_route_live.txt  agent_status_demo.txt  auto_route_demo.txt  mcp_implementation_analysis.md  mcp_task_report.md  perm_once.txt  runtime_notes.md  should_not_exist.txt  taizhou-nantong-zhangjiagang-mayday-guide.html  yolo_ok.txt
work/agent_full_demo/: test_math_utils.py
work/audit_demo/: test_math_utils.py
work/lsp_demo/: mod.py
work/model_skill_demo/: SKILL.md
work/model_skill_demo2/: SKILL.md  demo.docx
work/skill_auto_live/: result.txt
(+109 files in other folders)
